--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@
 
 .logo-format {
     height: 40px;
+    
 }
 
 .fade-in-container {
@@ -56,7 +57,6 @@
 /* Utility Class - End */
 
 body {
-    background-color: rgb(255, 255, 255);
     margin: 0px 15px 0px 15px;
 }
 /* Navigation */
@@ -64,6 +64,7 @@ nav {
     z-index: 1000;
     width: 100%;
     background-color: rgb(255, 255, 255);
+    border-radius: 0px 0px 4px 4px;
     align-self: flex-start;
     justify-content: space-between;
     position: fixed;
